# PCFilter

./: CMakeLists.txt  main.cpp
glib/: CMakeLists.txt  CloudCompare.hpp  FileExtend.cpp  FileExtend.h  Point.hpp  V2.hpp  V3.hpp
lib/: CMakeLists.txt  Confidence.cpp  Confidence.h  extract_confidence_error.cpp  extract_confidence_error.h  global.cpp  global.h  points_extract.hpp  texture_mapping.cpp  texture_mapping.h  txt_to_color_ply.cpp  txt_to_color_ply.h
