cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(pcfilter)
find_package(PCL 1.2 REQUIRED)

FIND_PACKAGE( OpenMP REQUIRED)
if(OPENMP_FOUND)
message("OPENMP FOUND")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

FIND_PACKAGE(OpenCV REQUIRED)

include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
include_directories(lib glib .)
ADD_SUBDIRECTORY(lib)
ADD_SUBDIRECTORY(glib)
aux_source_directory(. MAIN_SRC)
add_executable (pcfilter ${MAIN_SRC})
target_link_libraries(pcfilter LIB)
target_link_libraries(pcfilter GLIB)
target_link_libraries (pcfilter ${PCL_LIBRARIES})
target_link_libraries(pcfilter ${OpenCV_LIBS})